--- a/pancard_temper_detector.ipynb
+++ b/pancard_temper_detector.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pancard temper detector.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfVk+Ke624qtApYHloXcke",
+      "authorship_tag": "ABX9TyNbJb22qpwPo93uyP47cvm6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,8 +84,62 @@
       },
       "source": [
         "# open image and display\n",
-        "original = Image.open(requests.get('https://www.thestatesman.com/wp-content/uploads/2019/07/pan-card.jpg'),stream = True).raw)\n",
-        "tempered = Image.open(requests.get('https://assets1.cleartax-cdn.com/s/img/20170526124335/Pan4.png'),stream = True).raw)"
+        "original = Image.open(requests.get('https://www.thestatesman.com/wp-content/uploads/2019/07/pan-card.jpg',stream = True).raw)\n",
+        "tempered = Image.open(requests.get('https://assets1.cleartax-cdn.com/s/img/20170526124335/Pan4.png',stream = True).raw)"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YaMAlCBW081X"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8HclRL4P0mkp",
+        "outputId": "5eda9e7f-4fb7-4f03-e268-36b006ccbf2c"
+      },
+      "source": [
+        "# loading original and user provided images\n",
+        "\n",
+        "# the file format of the source file\n",
+        "print(f'original image format: {original.format}')\n",
+        "print(f'tempered image format: {tempered.format}')\n",
+        "\n",
+        "# Image Size in pixels, the size is given as a 2 touples(width, heights)\n",
+        "print(f'original image size: {original.size}')\n",
+        "print(f'tempered image size: {tempered.size}')"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "original image format: JPEG\n",
+            "tempered image format: PNG\n",
+            "original image size: (1200, 800)\n",
+            "tempered image size: (282, 179)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atEL7qCN1tge"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
